--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
     </footer>
     <script>
         alert('Use a barra de rolagem lateral para melhores resultados!!!')
+        alert('Design não é responsivo!!!')
         let stars = document.getElementById('stars')
         let moon = document.getElementById('moon')
         let mountains_behind = document.getElementById('mountains_behind')
